--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,14 @@ dependencies = [
     "langchain (>=0.3.27,<0.4.0)",
     "langchain-community (>=0.3.29,<0.4.0)",
     "loguru (>=0.7.3,<0.8.0)",
-    "dotenv (>=0.9.9,<0.10.0)"
+    "dotenv (>=0.9.9,<0.10.0)",
+    "faster-whisper (>=1.2.0,<2.0.0)",
+    "uvicorn (>=0.32.1,<0.33.0)",
+    "sqlalchemy (>=2.0.36,<3.0.0)",
+    "pydantic-settings (>=2.6.1,<3.0.0)",
+    "python-multipart (>=0.0.12,<0.1.0)",
+    "websockets (>=15.0.1,<16.0.0)",
+    "langchain-postgres (>=0.0.15,<0.0.16)"
 ]
 
 
