--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "pydantic-settings (>=2.6.1,<3.0.0)",
     "python-multipart (>=0.0.12,<0.1.0)",
     "websockets (>=15.0.1,<16.0.0)",
-    "langchain-postgres (>=0.0.15,<0.0.16)"
+    "langchain-postgres (>=0.0.15,<0.0.16)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "openai (>=1.107.3,<2.0.0)"
 ]
 
 
